[workspace]
members = ["copc-core", "copc-reader", "copc-writer"]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/copc-rust"
homepage = "https://github.com/roteiro-gis/copc-rust"

[workspace.dependencies]
byteorder = "1"
las = { version = "0.8", features = ["laz"] }
laz = "0.8"
memmap2 = "0.9"
rayon = "1"
thiserror = "2"
