[workspace]
members = ["copc-core", "copc-reader", "copc-writer"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/roteiro-gis/copc-rust"
homepage = "https://github.com/roteiro-gis/copc-rust"

[workspace.dependencies]
byteorder = "1"
criterion = "0.8"
las = { version = "0.10", features = ["laz"] }
laz = "0.12"
memmap2 = "0.9"
rayon = "1"
tempfile = { version = "3", default-features = false }
thiserror = "2"
