[package]
name = "copc-reader"
description = "Pure-Rust COPC reader with public hierarchy access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/copc-reader"
keywords = ["copc", "las", "laz", "point-cloud", "gis"]
categories = ["science", "parser-implementations"]
exclude = [
    "tests/external_fixtures.rs",
    "tests/fixtures/external/**",
]

[features]
## Parallel chunk decoding for column reads with rayon.
parallel = ["dep:rayon"]
## HTTP range-request source for `CopcRangeReader` (plain HTTP out of the box).
http = ["dep:ureq"]
## Enables TLS in ureq so `HttpRangeReader` can fetch HTTPS URLs.
http-tls = ["http", "ureq/tls"]

[dependencies]
byteorder = { workspace = true }
copc-core = { version = "0.4.2", path = "../copc-core" }
las = { workspace = true }
laz = { workspace = true }
rayon = { workspace = true, optional = true }
ureq = { version = "2", optional = true, default-features = false }

[dev-dependencies]
copc-writer = { path = "../copc-writer" }
tempfile = { workspace = true }
tiny_http = "0.12"
