[package]
name = "copc-writer"
description = "Pure-Rust COPC writer with streaming LAS intake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/copc-writer"
keywords = ["copc", "las", "laz", "point-cloud", "gis"]
categories = ["science", "encoding"]

[dependencies]
byteorder = { workspace = true }
copc-core = { version = "0.4.1", path = "../copc-core" }
las = { workspace = true }
laz = { workspace = true }
memmap2 = { workspace = true }
tempfile = { version = "3", default-features = false }

[dev-dependencies]
copc-reader = { version = "0.4.1", path = "../copc-reader" }
