[package]
name = "copc-writer"
description = "Pure-Rust COPC writer with streaming LAS intake"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/copc-writer"
keywords = ["copc", "las", "laz", "point-cloud", "gis"]
categories = ["science", "encoding"]

[features]
## Parallel LAZ chunk compression with rayon; each octree node is still one
## COPC chunk, compressed on a worker thread and written in order.
parallel = ["dep:rayon"]

[dependencies]
byteorder = { workspace = true }
copc-core = { version = "0.4.2", path = "../copc-core" }
las = { workspace = true }
laz = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true, optional = true }
tempfile = { workspace = true }

[dev-dependencies]
copc-reader = { version = "0.4.2", path = "../copc-reader" }
criterion = { workspace = true }

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "read"
harness = false
